Fix weird issue with overflow on search button

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -24,6 +24,7 @@
         border-bottom-left-radius: 0;
         color: transparent;
         position: absolute;
+        overflow: hidden;
         top: 0.5em;
         right: 0.5em;
         text-shadow: none;
